# ChangeLog for net-p2p/eiskaltdc
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +eiskaltdc-9999-r1.ebuild:
  add 9999 ebuild in Cmake build system testing

  20 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +eiskaltdc-1.0.2.ebuild, eiskaltdc-9999.ebuild:
  add new version
  20 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> -eiskaltdc-1.0.0.ebuild:
  delete old version

  20 Sep 2009; A. Vinogradov <spamslepnoga@inbox.ru> 
  eiskaltdc-9999.ebuild:
  clean ebuild code

  19 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> eiskaltdc-0.5a.ebuild,
  metadata.xml:
  fix bad description

  07 Aug 2009; <anti@gentoo.org> ChangeLog:
  Changelog bump
