@@ -1,5 +1,7 @@
 DIST eiskaltdc-1.0.2.tar.bz2 1938429 RMD160 ed1be884a081e3ec1712c52d5c9c5a0bf3a9c942 SHA1 fb53077d82883e48705915333e3a81b2357b172f SHA256 50e980aa655db5afa7465bb72e0f4245a728aa62a4f764fdd5c2c2692130c8ed
+DIST eiskaltdc-1.0.40.tar.bz2 1691772 RMD160 d7a206f70ba78172a199de435b7a38ed42e88865 SHA1 c23d37e9b07544770212a6d7ec3a9bc08fb5f8f3 SHA256 697f906f64ffa7ba39a8be9ac47917591be19e283d45f2a91f5bfa2395c93e0d
 EBUILD eiskaltdc-1.0.2.ebuild 863 RMD160 54b38dd50269345ed0c4f01d168ae16d5f68d6aa SHA1 badcee680cb4c0286c7ef682c53770f7c0a83b1f SHA256 d60525d697c4590900c896f451f6ba46cd782a7a7415d99d4d64bd8d15ca419e
+EBUILD eiskaltdc-1.0.40.ebuild 599 RMD160 30a1e6837f75f65cfc7b15a42c2a333687ed5b9c SHA1 097e09ef34f90de9ac49979a6113d9f76c3c02b8 SHA256 186c95e117dff5892df836d59a7d67a8fd07ba5e61b10c7c4346e91aa9e60a16
 EBUILD eiskaltdc-9999.ebuild 796 RMD160 5e7271b3bcc1e27dab42c9e4501260855ad4cd92 SHA1 9a5d06918f03747d662b7769537ca6d4a8e5cf40 SHA256 bb62fc8a8dfc7cc392b38e16dafcf2d5ef99856601d851de52baf1e0413cab4f
-MISC ChangeLog 747 RMD160 6fe70c386ad6c579f6310d84b4f2d786703654a0 SHA1 a710da667146981332a22b61ed9b42eec66c8155 SHA256 43b02b53727df72596da7e592b479b0673d197ab4e5a28356649d1e30fa3bcb1
+MISC ChangeLog 844 RMD160 af5e14ae2d369d8d5d274a7598abfcb52da9f254 SHA1 4d99c59f4efec2ce1cd49bd4bce31b669d4f3a62 SHA256 3493e756c0ad4efc7aeb00cec628949558a78d440249eb97836731d1623526ab
 MISC metadata.xml 247 RMD160 d9dbc213793413ee971eb2153aeb87a23ab9ee5b SHA1 20912308b3b6a48acf1ebc34de61a9ff1caba154 SHA256 dee352934f95e5b33d8cec04b9d1fa5e321fa2f82bd6792fd0015db46b2417d6
