@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Dec 2009; A. Vinogradov <spamslepnoga@inbox.ru>
+  +eiskaltdc-1.0.40.ebuild:
+  version bump
+
   07 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
   +eiskaltdc-9999-r1.ebuild:
   add 9999 ebuild in Cmake build system testing
